Refactore Challenge API
